2006-07-07  Carlos Garnacho  <carlosg@gnome.org>

	* AUTHORS.Net-DBus, COPYING.Net-DBus, Net-DBus/*, configure.in,
	Makefile.am: Modified patch from Frederic Peters  <fpeters@0d.be> to
	include an internal copy of Net::DBus.

2006-07-07  Carlos Garnacho  <carlosg@gnome.org>

	* Utils/Monitor.pm (do_monitor_files): improvements to the "changed"
	signal emission.

2006-06-12  Carlos Garnacho  <carlosg@gnome.org>

	* Release 1.9.1

2006-06-12  Carlos Garnacho  <carlosg@gnome.org>

	* Makefile.am: install *Config.pm too!

2006-06-06  Carlos Garnacho <carlosg@gnome.org>

	* Release 1.9.0

2006-06-05  Carlos Garnacho  <carlosg@gnome.org>

	* Makefile.am, Init/Makefile.am, Network/Makefile.am,
	Shares/Makefile.am, Time/Makefile.am, Users/Makefile.am,
	Utils/Makefile.am: distcheck fixes

2006-06-05  Carlos Garnacho  <carlosg@gnome.org>

	* Users/Users.pm (change_user_chfn): specify which user to modify.
	(add_user): remove a stray apostrophe.
	* Users/Groups.pm (change_group): get the correct state for the users

2006-06-05  Carlos Garnacho  <carlosg@gnome.org>

	* HostsConfig.pm: uncomment some needed code.
	* Network/Hosts.pm: fix a couple of code typos.
	* IfacesConfig.pm, Network/Ifaces.pm: get/set "auto"
	* Init/Services.pm (set_sysv_service): fix a typo that made links to
	be erased/recreated, remove links for ignored services.

2006-06-01  Carlos Garnacho  <carlosg@gnome.org>

	* Utils/Replace.pm (set_init_bool): inverse logic to allow values != 1
	to be TRUE.
	* Shares/SMB.pm (get): initialize $smb_conf_file before actually using
	it.

2006-05-30  Carlos Garnacho  <carlosg@gnome.org>

	* Network/Hosts.pm (run_hostname), (get_fqdn_replace_table)
	(ensure_hostname): added
	(set_fqdn): use get_fqdn_replace_table().
	(set_hosts), (get_hosts): renamed, former get() and set()
	(set_hosts): ensure that if hostname changes /etc/hosts file reflects
	this too.
	* HostsConfig.pm: ensure that the set() Dbus message format contains
	hostname and domainname
